gcc/testsuite/rust/compile/issue-3618.rs
static _X: () = loop {}; // { dg-error "loop iteration count exceeds limit" }
